[package]
name = "seeed-studio-relay-board"
version = "0.1.2"
authors = ["David \"Dregel\" Bengtsson <david@witchcult.se>"]
description = "A library for controlling the Seeed Raspberry Pi Relay Board."
keywords = ["seeed", "raspberrypi", "relay", "HAT", "i2c"]
license = "MIT"
repository = "https://github.com/Dregel/rust-seeed-studio-relay-board"

[dependencies]
i2c-linux = "0.1.2"
